@@ -377,6 +377,14 @@ AC_ARG_WITH(apxs,
     AC_MSG_RESULT(no)
 ])
 
+AC_MSG_CHECKING(whether to enable versioning)
+AC_ARG_ENABLE(versioning,
+[  --enable-versioning],
+[
+  if test "$enableval" = "yes" ; then
+    RPATHS="-Wl,--version-script=\$(srcdir)/php.map $RPATHS"
+  fi
+])
 
 APACHE_INSTALL_FILES="$srcdir/mod_php4.* libphp4.module"
 
